@@ -243,6 +243,7 @@ struct options
   /* route management */
   const char *route_script;
   const char *route_default_gateway;
+  int route_default_metric;
   bool route_noexec;
   int route_delay;
   int route_delay_window;
